# oxide

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCS.md  LICENSE  Prompts.md  README.md  ROADMAP.md  SECURITY.md  claude-hackathon.md  oxide-forge.md
.github/workflows/: ci.yml  docs.yml  release.yml
content/: oxide-ai-video-script.md  oxide-developer-article.md
content/video/: oxide-description.txt  video-demo.md
content/video/oxide-promo/: DESIGN.md  index.html  meta.json  script.txt
examples/audio-player/: Cargo.toml
examples/audio-player/src/: lib.rs
examples/events-demo/: Cargo.toml
examples/events-demo/src/: lib.rs
examples/file-picker-demo/: Cargo.toml
examples/file-picker-demo/src/: lib.rs
examples/fullstack-notes/: README.md
examples/fullstack-notes/backend/: Cargo.toml
examples/fullstack-notes/backend/src/: main.rs  proto.rs
examples/fullstack-notes/frontend/: Cargo.toml
examples/fullstack-notes/frontend/src/: lib.rs
examples/gpu-graphics-demo/: Cargo.toml
examples/gpu-graphics-demo/src/: lib.rs
examples/gradient-demo/: Cargo.toml
examples/gradient-demo/src/: lib.rs
examples/hello-oxide/: Cargo.toml
examples/hello-oxide/src/: lib.rs
examples/index/: Cargo.toml
examples/index/src/: lib.rs
examples/markdown-editor/: Cargo.toml
examples/markdown-editor/src/: lib.rs
examples/media-capture/: Cargo.toml
examples/media-capture/src/: lib.rs
examples/midi-demo/: Cargo.toml
examples/midi-demo/src/: lib.rs
examples/raf-demo/: Cargo.toml
examples/raf-demo/src/: lib.rs
examples/rtc-chat/: Cargo.toml
examples/rtc-chat/src/: lib.rs
examples/stream-fetch-demo/: Cargo.toml
examples/stream-fetch-demo/src/: lib.rs
examples/timer-demo/: Cargo.toml
examples/timer-demo/src/: lib.rs
examples/typography-demo/: Cargo.toml
examples/typography-demo/src/: lib.rs
examples/video-player/: Cargo.toml
examples/video-player/src/: lib.rs
examples/ws-chat/: Cargo.toml
examples/ws-chat/src/: lib.rs
forge/: DEMO_PROMPTS.md  PATTERNS.md  README.md  SYSTEM_PROMPT.md
forge/skills/oxide-wasm-app/: SKILL.md
forge/skills/oxide-wasm-app/references/: CAPABILITIES.md  RECIPES.md
forge/templates/base/: Cargo.toml
forge/templates/base/src/: lib.rs
oxide-browser/: Cargo.toml
oxide-browser/src/: audio_format.rs  bookmarks.rs  capabilities.rs  download.rs  engine.rs  events.rs  fetch.rs  file_picker.rs  forge.rs  gpu.rs  history.rs  lib.rs  main.rs  manifest.rs  media_capture.rs  midi.rs  navigation.rs  rtc.rs  runtime.rs  solana.rs  subtitle.rs  ui.rs  url.rs  video.rs  video_format.rs  websocket.rs
oxide-docs/: Cargo.toml  README.md  index.html  rustdoc-header.html
oxide-docs/src/: lib.rs
oxide-landing/: audio_player.wasm  events_demo.wasm  hackathon.html  hello_oxide.wasm  index.html  index.wasm  robots.txt  script.js  site.webmanifest  sitemap.xml  styles.css  timer_demo.wasm
oxide-sdk/: Cargo.toml  README.md
oxide-sdk/src/: draw.rs  lib.rs  proto.rs
solana-wasm-registry/: .gitignore  Anchor.toml  README.md  package.json
solana-wasm-registry/programs/wasm-registry/: Cargo.toml
solana-wasm-registry/programs/wasm-registry/src/: lib.rs
solana-wasm-registry/tests/: wasm-registry.ts
