[workspace]
members = [
    "oxide-browser",
    "oxide-sdk",
    "oxide-docs",
    "examples/hello-oxide",
    "examples/audio-player",
    "examples/timer-demo",
    "examples/fullstack-notes/frontend",
    "examples/fullstack-notes/backend",
    "examples/index",
    "examples/video-player",
    "examples/media-capture",
    "examples/gpu-graphics-demo",
    "examples/rtc-chat",
]
resolver = "2"
