[package]
name = "wasm-registry"
version = "0.1.0"
description = "On-chain registry of signed WebAssembly module hashes"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "wasm_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
